<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <!-- Link the searh view widget -->
    <item
        android:id="@+id/menu_search"
        android:title="@string/kereses"
        android:icon="@drawable/ic_search"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_sortBy"
            android:title="@string/szures">
            <menu>
                <item
                    android:id="@+id/menu_priority_high"
                    android:title="@string/fontos"/>
                <item
                    android:id="@+id/menu_priority_low"
                    android:title="@string/raer"/>
            </menu>
         </item>
    </group>

    <item
        android:id="@+id/menu_delete_all"
        android:title="@string/osszes_torlese"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_api"
        android:title="LolApi"/>
</menu>